# lossy_image

./: .gitignore  data_ml.pkl  data_ml_inception_resnet_v2.pkl  data_ml_mobilenet_v2.pkl  data_ml_resnet50.pkl  get_all_file_and_gt.py  gt_attr.pkl  image_to_quality.py  ml-app.py  ml_metric.py  ml_result_20.txt
C_implementation_LITP_TCP/: CMakeLists.txt  LITP.h  TCPClient.cpp  TCPServer.cpp  UDPClient.c  UDPServer.c  test_litp.c
echo_experiment/edge/: echo_client_tcp.py  echo_client_udp.py
echo_experiment/server/: echo_server_tcp.py  echo_server_udp.py  receive_image_tcp.py  receive_image_udp.py
image_loss_recovery_emulator/: imageproc.py
image_transmission/tcp/: receive_image_tcp.py  send_image_tcp.py
image_transmission/tcp_udp/: send_image_udp_tcp.py
image_transmission/udp/: receive_image_XYZ.py  receive_image_udp.py  send_image_XYZ.py  send_image_udp.py
video-quality/demo/: jpg_demo.py
